correct font, word and letter spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,10 +14,20 @@
   }
 }
 
+@font-face {
+  font-family: 'Oxygen';
+  src: url('fonts/oxygen.light.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+body, button, input, optgroup, select, textarea {
+  font-family: 'Oxygen', sans-serif;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif,;
 }
 
 .bg-filtered {
